[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/LocalPlayerSetup/LocalPlayerSetup.gd" type="Script" id=1]

[node name="LocalPlayerSetup" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 477.0
margin_top = 274.0
margin_right = 547.0
margin_bottom = 326.0

[node name="Options" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 63.0
margin_bottom = 45.0

[node name="PlayerCountSelect" type="HBoxContainer" parent="Panel/Options"]
margin_right = 56.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="Panel/Options/PlayerCountSelect"]
margin_right = 8.0
margin_bottom = 14.0
text = "1"

[node name="CountScroll" type="HScrollBar" parent="Panel/Options/PlayerCountSelect"]
margin_left = 12.0
margin_right = 44.0
margin_bottom = 12.0
rect_min_size = Vector2( 32, 0 )
min_value = 1.0
max_value = 2.0
step = 1.0
value = 1.0

[node name="Label2" type="Label" parent="Panel/Options/PlayerCountSelect"]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 14.0
text = "2"

[node name="PlayButton" type="Button" parent="Panel/Options"]
margin_top = 18.0
margin_right = 56.0
margin_bottom = 38.0
text = "PLAY"

[connection signal="pressed" from="Panel/Options/PlayButton" to="." method="_on_PlayButton_pressed"]
